--- a/AR/van/index.html
+++ b/AR/van/index.html
@@ -1,14 +1,20 @@
 <!doctype html>
 <html>
     <head>
+        <title>Van AR</title>
+        <link rel="stylesheet" href="../styles/common.css">
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
         <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
+        <script src="../scripts/main.js"></script>
     </head>
 
     <body style="margin: 0; overflow: hidden;">
+        <div class="arjs-loader">
+            Loading
+        </div>
         <a-scene
             vr-mode-ui="enabled: false;"
             loading-screen="enabled: false;"
