added loading screen

--- a/AR/chimmy/index.html
+++ b/AR/chimmy/index.html
@@ -17,7 +17,7 @@
         </div>
         <a-scene
             vr-mode-ui="enabled: false;"
-            loading-screen="enabled: false;"
+            loading-screen="dotsColor: red; backgroundColor: black"
             renderer="logarithmicDepthBuffer: true;"
             arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
             id="scene"
