--- a/AR/foxiny/index.html
+++ b/AR/foxiny/index.html
@@ -8,16 +8,16 @@
         <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
-        <script src="../scripts/main.js"></script>
+        <!-- <script src="../scripts/main.js"></script> -->
     </head>
 
     <body style="margin: 0; overflow: hidden;">
-        <div class="arjs-loader">
+        <!-- <div class="arjs-loader">
             Loading
-        </div>
+        </div> -->
         <a-scene
             vr-mode-ui="enabled: false;"
-            loading-screen="dotsColor: red; backgroundColor: black"
+            loading-screen="dotsColor: red; backgroundColor: #24CAFF;"
             renderer="logarithmicDepthBuffer: true;"
             arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
             id="scene"
