--- a/AR/foxiny/index.html
+++ b/AR/foxiny/index.html
@@ -2,19 +2,22 @@
 <html>
     <head>
         <title>Foxiny AR</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../styles/common.css">
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
         <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
-        <!-- <script src="../scripts/main.js"></script> -->
+        <script src="../scripts/main.js"></script>
     </head>
 
     <body style="margin: 0; overflow: hidden;">
-        <!-- <div class="arjs-loader">
-            Loading
-        </div> -->
+        <div class="arjs-loader">
+            <h1>Loading</h1>
+        </div>
         <a-scene
             vr-mode-ui="enabled: false;"
             loading-screen="dotsColor: red; backgroundColor: #24CAFF;"
