--- a/AR/koya/index.html
+++ b/AR/koya/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Koya AR</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../styles/common.css">
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
@@ -13,7 +16,7 @@
 
     <body style="margin: 0; overflow: hidden;">
         <div class="arjs-loader">
-            Loading
+            <h1>Loading</h1>
         </div>
         <a-scene
             vr-mode-ui="enabled: false;"
