--- a/AR/van/index.html
+++ b/AR/van/index.html
@@ -16,6 +16,7 @@
 
     <body style="margin: 0; overflow: hidden;">
         <div class="arjs-loader">
+            <img src="../common-assets/PIKO WINK.gif" alt="piko-wink-gif">
             <h1>Loading</h1>
         </div>
         <a-scene
