--- a/AR/sanrio/index.html
+++ b/AR/sanrio/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
 <html>
     <head>
-        <title>Chimmy AR</title>
+        <title>Sanrio AR</title>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Chewy&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="../styles/common.css">
         <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
+        <script src="https://raw.githack.com/donmccurdy/aframe-extras/master/dist/aframe-extras.loaders.min.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
         <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
         <script src="../scripts/main.js"></script>
@@ -20,12 +21,20 @@
         </div>
         <a-scene
             vr-mode-ui="enabled: false;"
-            loading-screen="dotsColor: red; backgroundColor: black"
+            loading-screen="enabled: false;"
+            renderer="logarithmicDepthBuffer: true;"
             arjs="trackingMethod: best; sourceType: webcam; debugUIEnabled: false;"
             id="scene"
             embedded
             gesture-detector
         >
+            <a-assets>
+                <a-asset-item
+                    id="animated-asset"
+                    src="assets/asset.gltf"
+                ></a-asset-item>
+            </a-assets>
+
             <a-marker
                 id="animated-marker"
                 type="pattern"
@@ -36,13 +45,14 @@
                 cursor="fuse: false; rayOrigin: mouse;"
                 id="markerA"
             >
-                <a-image
-                    src="assets/asset.gif"
-                    scale="1 1 1"
+                <a-entity
+                    id="bowser-model"
+                    scale="0.22466131039504422 0.22466131039504422 0.22466131039504422"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset"
                     class="clickable"
-                    rotation="-90 0 0"
                     gesture-handler
-                ></a-image>
+                ></a-entity>
             </a-marker>
 
             <a-entity camera></a-entity>
