--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html>
+
+<head>
+    <title>I Am Your Hope</title>
+    <meta name="description" content="I Am Your Hope landing page. It's an ecommerce store. Find us on Facebook">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/index.css">
+</head>
+
 <body>
-<h1>🚧 Under construction. 🚧</h1>
+    <nav></nav>
+    <div class="container">
+        
+    </div>
 </body>
+
 </html>
